# rust-em-100-dias

./: .gitignore  Cargo.toml  README.md
Dia 01/: Cargo.toml  README.md
Dia 01/src/: estruturas_rep.rs  main.rs
Dia 02/: Cargo.toml  README.md
Dia 02/src/: db.rs
dia_01/: Cargo.toml  README.md
dia_01/src/: variaveis.rs
dia_02/: Cargo.toml  README.md
dia_02/src/: main.rs
dia_03/: Cargo.toml
dia_03/src/: main.rs  traits.rs  types.rs
